Aug 27 2002  2.5.2  Resampled alert.wav to be much smaller.
Aug 25 2002  2.5.2  Optomizations to panelfront
                    Rudimentary deauthentication flood detection
                    kismet_curses exit code used to determine if a kill of 
                     kismet_server is necessary (eliminates bash errors on some
                     conditions).
Aug 24 2002  2.5.2  Fixed major problems introduced with yesterdays speed boost
                    Fixed gpsmap from yesterdays changes
Aug 23 2002  2.5.2  Doubled (or more) the speed of packet tracking via 
                     suggestions from Million
                    Incorporated speed boosts into tcpclient and frontend
Aug 22 2002  2.5.2  Added Netstumbler 2.32 detection
                    Improved netstumbler dissection and boosted packet
                     processing speed slightly
                    Improved speed of packetracker data handling
Aug 21 2002  2.5.2  Fixed a few minor parsing errors in tcpclient.cc
                    Speedboosted kismet_curses tcpclient.poll() interpretation
                    Added alert sound conditions
                    Added configurable alert backlog in server for low mem/high
                     alert situations.
                    Added alert wav file to install
                    Fixed alert sound breaking the UI when sound was disabled
                    Added alert window help and toggle to display/hide timestamps
                    Rewrote 802.11 frame header dissection
                    Added extraction of fragment and sequence number
                    Added detection of deauthentication packets
                    Updated Makefile to use $(MAKE) and to have a rpm target
                    Added RPM specfile from Miah
                    Fixed kismet_server to find the home directory after the
                     privdrop
                    Fixed segfault on free() when using command-line supplied 
                     config file.